# Filthy-Net-Deck

./: .gitignore  100X-ROADMAP.md  AGENTS.md  HANDOFF-v1.4.0.md  README.md  ROADMAP.md  eslint.config.js  handoff.md  index.html  netlify.toml  package-lock.json  package.json  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  daily-meta.yml  macos-build.yml  sets-refresh.yml
docs/: AUDIT-2026-07-22-v2.5.0.md  DATA-AND-UPDATES.md  GIT-HISTORY-BLOAT.md  MAINTENANCE.md  PAGE-10X.md
marketing-video/: README.md  package-lock.json  package.json
marketing-video/scripts/: generate_soundtracks.py
marketing-video/src/: Background.tsx  (+5 more)
packaging/: README.md
pipeline/: build-meta-site.mjs  build-meta.mjs  build-sets.mjs  export-seed-run.ts  export-seed.mjs  fetch-goldfish-lists.mjs  fix-website-mojibake.py  goldfish.test.mjs  listMatch.test.mjs  magic-gg.test.mjs  mtgoNames.test.mjs  mythicspoiler.test.mjs  untapped.test.mjs
public/: version.json
scripts/: apply-marketing-1.2.0.mjs  bump-version.mjs  capture-theme-screens.mjs  do-1.1-bump.mjs  do-1.1.1-bump.mjs  do-1.3.0-bump.mjs  do-1.3.5-bump.mjs  do-1.4.0-bump.mjs  do-1.4.1-bump.mjs  do-1.4.2-bump.mjs  do-1.4.3-bump.mjs  do-1.4.4-bump.mjs  do-1.5.0-bump.mjs  do-1.5.1-bump.mjs  do-1.6.0-bump.mjs  do-1.7.0-bump.mjs  do-1.8.0-bump.mjs  do-2.0.1-bump.mjs  do-2.0.2-bump.mjs  do-2.1.0-bump.mjs  do-2.2.0-bump.mjs  do-2.2.1-bump.mjs  finish-1.2.0-meta.mjs  finish-1.4.4-meta.mjs  fix-domain-brand.mjs  fix-html-1.2.0.mjs  fix-macos-labels-1.4.0.mjs  fix-macos-labels-1.4.1.mjs  fix-og-1.2.0.mjs  fix-website-mojibake.mjs  gen-mtgo-name-map.mjs  inspect-mojibake.mjs  patch-marketing-1.1.mjs  roll-macos-1.1.1.mjs  roll-macos-1.4.0.mjs  roll-macos-1.4.1.mjs  roll-macos-1.4.4.mjs  roll-macos-1.5.1.mjs  roll-macos-1.6.0.mjs
src/: App.tsx  index.css  main.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: arena.rs  lib.rs  main.rs  overlay.rs  presence.rs  silent_update.rs  toast.rs  tracker.rs
src-tauri/tests/fixtures/logs/: README.md
website/: index.html  netlify.toml  robots.txt  script.js  sitemap.xml  styles.css  version.json
(+348 files in other folders)
