[package]
name = "ban-basic-island"
version = "0.5.0"
description = "Ban Basic Island — MTG Arena meta companion"
authors = ["you"]
edition = "2021"

[lib]
name = "ban_basic_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"
tauri-plugin-store = "2.4.3"
