[package]
name = "filthy-net-deck"
version = "0.10.0"
description = "Filthy Net Deck — MTG Arena meta companion"
authors = ["you"]
edition = "2021"

[lib]
name = "filthy_net_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"
tauri-plugin-store = "2.4.3"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
