[package]
name = "filthy-net-deck"
version = "1.7.0"
description = "Filthy Net Deck — MTG Arena meta companion"
authors = ["you"]
edition = "2021"

[lib]
name = "filthy_net_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"
tauri-plugin-store = "2.4.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-notification = "2.3.3"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
